--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/zyozkzdc/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    - /bin/cp -R ddd-example $DEPLOYPATH
