--- a/_entry/composer.json
+++ b/_entry/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
@@ -25,6 +26,7 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "Auth\\": "../Auth/",
+            "Product\\": "../Product/",
             "UseCases\\": "../UseCases/"
         }
     },
